feat: add SEO optimizations with JSON-LD structured data and performance hints
- Add JSON-LD structured data for Article/BlogPosting schema
- Add BreadcrumbList schema for navigation
- Add performance hints (preconnect, dns-prefetch) for external resources
- Configurable via params.seo.structuredData and params.seo.performanceHints
- Support for additional preconnect domains configuration

--- a/layouts/partials/head/head.html
+++ b/layouts/partials/head/head.html
@@ -13,6 +13,8 @@
 {{- partial "head/style.html" . -}}
 {{- partial "head/script.html" . -}}
 {{- partial "head/opengraph/include.html" . -}}
+{{- partial "head/performance-hints" . -}}
+{{- partial "structured-data/include" . -}}
 
 {{- range .AlternativeOutputFormats -}}
     <link rel="{{ .Rel }}" type="{{ .MediaType.Type }}" href="{{ .Permalink | safeURL }}">
