feat: enhance Article/BlogPosting schema SEO with missing fields
- Add keywords field by merging tags and categories
- Add articleSection using first category
- Add wordCount and timeRequired fields
- Add inLanguage field for better language identification
- Add author image support
- Update theme branding from Stack to Fried Rice
- Fix exampleSite configuration and references

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,11 +1,12 @@
 /*!
-*   Hugo Theme Stack - v0 Redesign
+*   Fried Rice Theme - Based on Hugo Theme Stack
 *
-*   @author: Jimmy Cai (Original Stack Theme)
-*   @website: https://jimmycai.com
-*   @link: https://github.com/CaiJimmy/hugo-theme-stack
+*   @original-author: Jimmy Cai (Original Stack Theme)
+*   @author: svtter
+*   @website: https://svtter.cn
+*   @link: https://github.com/Svtter/Fried-Rice
 *
-*   v0 redesign: Modern layout with fixed header navigation
+*   Fried Rice redesign: Warm earth tones and flat design
 */
 
 /* 1. Core foundation */
