--- a/layouts/partials/footer/footer.html
+++ b/layouts/partials/footer/footer.html
@@ -14,7 +14,7 @@
         {{ end }}
 
         {{- $ThemeText := `主题 <b>Fried Rice</b> 由 <a href="https://svtter.cn" target="_blank" rel="noopener">svtter</a> 设计` -}}
-        {{- $BuiltOnText := `Built on <a href="https://github.com/CaiJimmy/hugo-theme-stack" target="_blank" rel="noopener">Stack</a>` -}}
+        {{- $BuiltOnText := `Fried Rice theme <a href="https://github.com/Svtter/Fried-Rice" target="_blank" rel="noopener">GitHub</a>` -}}
 
         {{ $ThemeText | safeHTML }} <br />
         {{ $BuiltOnText | safeHTML }}
