--- a/layouts/partials/structured-data/article.html
+++ b/layouts/partials/structured-data/article.html
@@ -39,10 +39,37 @@
     {{- $publisherLogo = "/img/avatar.png" | absURL -}}
 {{- end -}}
 
+{{- /* Determine article type based on params or section */ -}}
+{{- $articleType := .Params.schemaType -}}
+{{- if not $articleType -}}
+    {{- if or (eq .Type "news") (eq .Section "news") -}}
+        {{- $articleType = "NewsArticle" -}}
+    {{- else if or (eq .Type "blog") (eq .Section "post") -}}
+        {{- $articleType = "BlogPosting" -}}
+    {{- else -}}
+        {{- $articleType = "Article" -}}
+    {{- end -}}
+{{- end -}}
+
+{{- /* Collect author social links */ -}}
+{{- $authorSameAs := slice -}}
+{{- with .Site.Author.github -}}
+    {{- $authorSameAs = $authorSameAs | append (printf "https://github.com/%s" .) -}}
+{{- end -}}
+{{- with .Site.Author.twitter -}}
+    {{- $authorSameAs = $authorSameAs | append (printf "https://twitter.com/%s" .) -}}
+{{- end -}}
+{{- with .Site.Author.linkedin -}}
+    {{- $authorSameAs = $authorSameAs | append (printf "https://linkedin.com/in/%s" .) -}}
+{{- end -}}
+{{- with .Site.Author.website -}}
+    {{- $authorSameAs = $authorSameAs | append . -}}
+{{- end -}}
+
 <script type="application/ld+json">
 {
     "@context": "https://schema.org",
-    "@type": "Article",
+    "@type": {{ $articleType | jsonify }},
     "mainEntityOfPage": {
         "@type": "WebPage",
         "@id": {{ .Permalink | jsonify }}
@@ -67,12 +94,21 @@
     {{- end }}
     "datePublished": {{ .Date.Format "2006-01-02T15:04:05Z07:00" | jsonify }},
     "dateModified": {{ .Lastmod.Format "2006-01-02T15:04:05Z07:00" | jsonify }},
+    {{- with .PublishDate }}
+    "datePublished": {{ .Format "2006-01-02T15:04:05Z07:00" | jsonify }},
+    {{- end -}}
+    {{- if not .PublishDate }}
+    "datePublished": {{ .Date.Format "2006-01-02T15:04:05Z07:00" | jsonify }},
+    {{- end -}}
     "author": {
         "@type": "Person",
         "name": {{ $authorName | jsonify }},
         "url": {{ $authorURL | jsonify }}{{- if $authorImage }},{{- end }}
         {{- with $authorImage }}
-        "image": {{ . | jsonify }}
+        "image": {{ . | jsonify }},
+        {{- end }}
+        {{- with $authorSameAs }}
+        "sameAs": {{ . | jsonify }}
         {{- end }}
     },
     "publisher": {
@@ -82,7 +118,30 @@
             "@type": "ImageObject",
             "url": {{ $publisherLogo | jsonify }}
         }
-    }
+    },
+    {{- with .Params.license }}
+    "license": {{ . | jsonify }},
+    {{- end -}}
+    {{- with .Site.Params.seo.accessibility }}
+    "accessMode": {{ .accessMode | default "textual,visual" | jsonify }},
+    "accessibilityFeature": {{ .accessibilityFeature | default "alternativeText,readingOrder" | jsonify }},
+    "accessibilitySummary": {{ .summary | default "The content is accessible for screen readers and keyboard navigation." | jsonify }},
+    {{- end -}}
+    {{- if eq $articleType "NewsArticle" -}}
+    {{- with .Params.news }}
+    "dateline": {{ .dateline | default "" | jsonify }},
+    {{- with .printSection }}
+    "printSection": {{ . | jsonify }},
+    {{- end -}}
+    {{- end }}
+    {{- end -}}
+    {{- if eq $articleType "BlogPosting" -}}
+    {{- with .Params.blog }}
+    {{- with .mentions }}
+    "mentions": {{ . | jsonify }},
+    {{- end -}}
+    {{- end }}
+    {{- end }}
 }
 </script>
 {{- end -}}
