feat: add language switcher button for EN/ZH switching
- Add language toggle icon button in header between RSS and theme toggle
- Add language switch option in mobile menu
- Add i18n translations for 'switchLanguage' in English and Chinese
- Add CSS styles for language toggle button matching theme toggle design
- Only shows when multiple languages are configured

--- a/layouts/partials/header/header.html
+++ b/layouts/partials/header/header.html
@@ -46,6 +46,23 @@
                     {{ partial "helper/icon" "rss" }}
                 </a>
 
+                {{/* Language toggle button */}}
+                {{- if (gt (len .Site.Languages) 1) -}}
+                    {{ $currentLang := .Lang }}
+                    {{ $targetLang := "" }}
+                    {{ range .Site.Languages }}
+                        {{ if ne .Lang $currentLang }}
+                            {{ $targetLang = .Lang }}
+                        {{ end }}
+                    {{ end }}
+                    <a href="{{ .Permalink | relLangURL }}"
+                       class="language-toggle"
+                       aria-label="{{ T `switchLanguage` }}"
+                       title="{{ T `switchLanguage` }}">
+                        {{ partial "helper/icon" "language" }}
+                    </a>
+                {{- end -}}
+
                 {{/* Theme toggle button */}}
                 {{- if (default false .Site.Params.colorScheme.toggle) -}}
                     <button id="dark-mode-toggle"
@@ -103,6 +120,14 @@
                     {{ partial "helper/icon" "rss" }}
                     <span>RSS</span>
                 </a>
+                {{/* Language switch in mobile menu */}}
+                {{- if (gt (len .Site.Languages) 1) -}}
+                    <a href="{{ .Permalink | relLangURL }}"
+                       class="mobile-social-link language-link">
+                        {{ partial "helper/icon" "language" }}
+                        <span>{{ T `switchLanguage` }}</span>
+                    </a>
+                {{- end -}}
             </div>
         </div>
     </nav>
