--- a/assets/scss/partials/components/forms.scss
+++ b/assets/scss/partials/components/forms.scss
@@ -56,6 +56,10 @@ select {
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' viewBox='0 0 12 12'%3E%3Cpath fill='%23666' d='M6 9L1 4h10z'/%3E%3C/svg%3E");
     background-repeat: no-repeat;
     background-position: right 12px center;
+
+    [data-scheme="dark"] & {
+        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' viewBox='0 0 12 12'%3E%3Cpath fill='%238E97A8' d='M6 9L1 4h10z'/%3E%3C/svg%3E");
+    }
 }
 
 /* Form groups */
@@ -114,7 +118,7 @@ input[type="checkbox"] {
         top: 2px;
         width: 4px;
         height: 8px;
-        border: solid white;
+        border: solid var(--accent-color-text);
         border-width: 0 2px 2px 0;
         transform: rotate(45deg);
     }
@@ -129,7 +133,7 @@ input[type="radio"] {
         width: 6px;
         height: 6px;
         border-radius: 50%;
-        background-color: white;
+        background-color: var(--accent-color-text);
     }
 }
 
